# rust-practice

./: .gitignore  README.md
tdlist/: .gitignore  Cargo.toml  README.md
tdlist/src/: app.rs  configuration.rs  lib.rs  main.rs  task.rs  task_form.rs  utils.rs
tdlist/src/cli/: add.rs  cli_utils.rs  formats.rs  ls.rs  mod.rs
