[package]
name = "tdlist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
chrono = "0.4.31"
clap = { version = "4.4.18", features = ["derive"] }
crossterm = "0.27.0"
dirs = "5.0.1"
itertools = "0.12.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tui = "0.19.0"
